Fix broken css
The css was broken because some things were accidentally deleted.

All fixed now.

--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ H1 {
     position: absolute;
     top: 380px;
     margin-left: auto;
-margin-right: auto;
-left: 0;
-right: 0;
-text-align: center;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
     padding: 10px 20px 10px 20px;
     width:fit-content;
     font-family: 'Varela Round', sans-serif;
@@ -55,6 +55,25 @@ a.divlink {
     height:100%;
     top:0;
     z-index: 0;
+/*
+    background-color: blue; */
+
+    font-style: normal;
+    text-decoration: none;
+}
+
+.buttons:hover > a {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.buttons:hover > a:hover {
+    background-color: transparent;
+}
+
+.choice {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width:100%;
     justify-content: flex-start;
 }
@@ -75,7 +94,7 @@ a.divlink {
     height: 200px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 100px;
+    margin-top: 10vh;
     border-radius: 100%;
     display: flex;
     align-items:center;
